# warlock

./: .bazelignore  .envrc  .gitignore  MODULE.bazel  README.md  multitool.lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/foo-app/: BUILD.bazel  index.html  node_modules  package.json  tsconfig.json  vite.config.mts
apps/foo-app/src/: main.tsx
bazel/: defs.bzl
pkgs/bazel-bin-tsserver-plugin/: monorepo-bazel-bin-tsserver-plugin-0.0.0.tgz  node_modules  package.json  tsconfig.json
pkgs/bazel-bin-tsserver-plugin/src/: index.ts
pkgs/foo-lib/: BUILD.bazel  dist  node_modules  package.json  tsconfig.json
pkgs/foo-lib/src/: HelloWorld.tsx  index.ts
pkgs/tsconfig/: BUILD.bazel  node_modules  package.json  tsconfig.json
pkgs/vite-config/: dist  node_modules  package.json  tsconfig.json
pkgs/vite-config/src/: index.ts
pkgs/vite-config/src/ssl/: README.md  server.crt  server.key
